files/map.css
  .gm-fullscreen-control {
    display: none !important;
}

/* Стили для infoWindow */
  /* .yNHHyP-marker-view{
    z-index: -2!important;
  } */

  .gm-ui-hover-effect{
    display: none!important;
  }

  .gm-style .gm-style-iw-c{
    padding: 0px!important;
    max-width: 480px!important;
  }

  .gm-style-iw-d{
    overflow: hidden!important;
    max-height: 250px!important;
  }

  .gm-style-iw-tc{
    display: none!important;
  }
  /*  */

  .loader-icon-marker{
    width: 12px;
    height: 12px;
    border: 1px solid #3D7B50;
    border-bottom-color: transparent;
    border-radius: 50%;
    display: inline-block;
    box-sizing: border-box;
    animation: rotation 1s linear infinite;
    position: absolute;
    top: 6px;
    left: 22px;
    z-index: 9999;
    display: none;
  }

  .marker-popup-header-info .qq-btn-place{
    display: flex;
    justify-content: left;
  }

  .map-dashboard-card-item-href{
    color: #000;
  }
  
  .property {
    align-items: center;
    background-color: #FFFFFF;
    border-radius: 12px;
    color: #263238;
    display: flex;
    box-shadow: 0px 4px 7px 2px #00000040;
    justify-content: center;
    position: relative;
    transition: all 0.3s ease-out;
    
  }

  .property .details {
    display: none;
  }
  .property.highlight {
    position: relative;
  }

  .zindex-property{
    z-index:-1!important;
  }

  .property.highlight .icon{
    background-color: #3968BF;
    color:#fff;
    border-radius: 12px;
  }

  .property.highlight.hide .icon{
    background-color: #fff;
    color:#263238;
  }

  .property.highlight .details {
    display: flex;
    position: absolute;
    top: 0;
    margin-top: 40px;
  }
 

  .property.highlight .map-marker-wrapper{
    display: none;
    padding: none;
    background-color: none;
    border-radius: none;
  }


/*  */

.map-marker-wrapper{
    padding: 4px 8px;
    background-color: #fff;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 12px;
}

.map-marker-description{
    font-size: 14px;
    font-weight: 600;
    line-height: 18px;
    letter-spacing: -0.01em;
    padding: 4px 8px;
    white-space: nowrap;
}

.map-marker-description.white-marker-text{
  color: #fff;
}

.marker-popup-wrapper{
    padding: 32px;
    min-width: 480px;
    /* height: 220px; */
    background-color: #fff;
    box-shadow: 0px 4px 47px -10px #00000015;
    border-radius: 12px;
}

.market-popup-header-img-wrapper{
    /* background-image: url('../images/marker-img.png'); */
    background-repeat: no-repeat;
    background-size: cover;
    min-width: 160px;
    min-height: 85px;
    border-radius: 12px;
}

.marker-popup-header-wrapper{
    display: flex;
    flex-direction: row;
    align-items: stretch;
    gap: 16px;
    padding-bottom: 16px;
    border-bottom: 1px solid #EBEDF2;
    position: relative;
}

.marker-popup-header-btn{
    position: absolute;
    top: -16px;
    right: -16px;
    display: none;
    align-items: center;
    justify-content: center;
    background-color: #3968BF;
    border-radius: 50%;
    width: 24px;
    height: 24px;
    cursor: pointer;
}

.marker-popup-header-title-wrapper{
    display: flex;
    flex-direction: column;
    align-items: center;
    align-items: flex-start;
    /* max-width: 90%; */
}

.marker-popup-header-title{
    font-size: 16px;
    font-weight: 700;
    line-height: 24px;
    letter-spacing: 0.0025em;
}

.marker-popup-header-description-wrapper{
    display: flex;
    align-items: center;
    gap: 4px;
}

.marker-popup-header-description-wrapper{
    display: flex;
    align-items: center;
    color: #3D7B50;
}

.marker-popup-header-description-rate{
    font-size: 16px;
    font-weight: 700;
    line-height: 24px;
    letter-spacing: 0em;

}

.marker-popup-header-description{
    font-size: 12px;
    font-weight: 600;
}

.marker-popup-header-description-alert{
  color: #BF3939;
}

.marker-popup-red-available-description{
  color: #BF3939;
}

.marker-popup-footer-info{
    display: flex;
    align-items: flex-end;
    justify-content: space-between;
    padding-top: 12px;
}

.marker-popup-footer-description-wrapper{
    display: flex;
    flex-direction: column;
    font-size: 12px;
    font-weight: 400;
    line-height: 18px;
    letter-spacing: 0.01em;
    color: #585858;
    /* padding-top: 12px; */
    gap: 4px;
}

.marker-popup-footer-description{
    display: flex;
    align-items: center;
    gap: 4px;
}

.marker-popup-footer-price{
    font-size: 20px;
    font-weight: 700;
    line-height: 24px;
    letter-spacing: 0.0025em;
    text-align: left;

}

.marker-popup-footer-price-wrapper{
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  text-align: right;
}

.marker-popup-footer-price-alert{
  text-decoration: line-through;
  color: #BF3939;
  font-size: 14px;
  font-weight: 400;
  line-height: 24px;
  letter-spacing: 0.0025em;

}

/* MAIN */

.result-amount-wrapper{
  display: flex;
  justify-content: space-between;
  margin: 40px 0 24px;
}

.landing-container .result-amount-wrapper h3.result-amount-text{ 
  font-size: 24px;
  font-weight: 700;
  line-height: 32px;
  letter-spacing: .25%;
  color: #000;
  margin: 0px;
}

.result-amount-map-search-wrapper{
  display: flex;
  align-items: center;
  gap: 8px;
  background-color: #E7EDF8;
  color: #3968BF;
  padding: 8px 16px;
  border-radius: 12px;
  cursor: pointer;
}

.result-amount-map-search-description{
  font-size: 14px;
  font-weight: 600;
  line-height: 18px;

}

.map-dashboard-main-wrapper-fade{
  display: none;
  position: fixed;
    top: 0;
    left: 0;
    z-index: 1050;
    display: none;
    width: 100%;
    height: 100%;
    overflow: hidden;
    outline: 0;
}

.map-dashboard-main-wrapper-fade.active{
  display: flex;
  justify-content: center;
  align-items: center;
  background: rgba(0, 0, 0, .5)
}

.map-dashboard-main-wrapper{
  width: 95%;
  height: 90%;
  /* background-color: #0288D1; */
}
/* ... */

